# Teaching-pack-generator-completed

./: README.md
Teaching-pack-generator-completed/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  run_worker.py
Teaching-pack-generator-completed/alembic/: env.py
Teaching-pack-generator-completed/alembic/versions/: 0736fa9cfd4d_drop_unused_tables.py  0c8ff0a450c0_increase_workflow_jobs_id_column_size_.py  15612ed2bf17_drop_groups_column_from_teaching_packs.py  1a2b3c4d5e6f_add_flashcards_to_lessons.py  2675e2c05b2a_add_lesson_summary_skill_set_diagnostic_.py  2b3c4d5e6f7a_add_theory_questions.py  2cadae36416a_add_output_file_path_to_teaching_packs.py  3ba0ffddfe80_add_flashcard_urls_to_teaching_packs.py  5ba1e24a2c3e_merge_heads.py  6d50d4d53f10_add_grade_level_and_notes_to_students.py  90c409c05248_change_teachingpack_id_to_uuid.py  9229b4cac7c2_initial_database_schema.py  94b40c00441a_drop_teaching_groups_table.py  9e1e9d12bf92_drop_unused_tables_skills_pack_content.py  ac4c06cb8a5d_create_workflow_jobs_table.py  acfa7cf5904b_add_uploaded_by_id_to_lessons_table.py  add_subject_scores_and_groups.py  b2e87acf061c_add_video_urls_and_slides_urls_fields.py  b6f41b4613c5_add_output_file_path_to_teaching_packs.py  c0ab1f3702cc_make_classroom_id_nullable_for_teaching_.py  d5111a331fcb_make_classroom_id_nullable_for_lessons.py
Teaching-pack-generator-completed/config/: default.yaml
Teaching-pack-generator-completed/experiments/: MAS_Pipeline_Overview.md  METRICS_EXPLANATION.md  QUICKSTART.md  README.md  batch_evaluation.py  example_ground_truth.json  extract_lesson_summary.py  mas_evaluation_experiment.py  mas_evaluation_experiment_qwen.py  mas_evaluation_experiment_vllm.py  mas_evaluation_experiment_vllm_qwen3_grpo_dpo.py  mas_evaluation_experiment_vllm_qwen3_grpo_dpo_variant.py  quick_test.py  single_agent_evaluation_experiment.py  single_agent_evaluation_experiment_vllm_qwen3_grpo_dpo.py
Teaching-pack-generator-completed/frontend/: README.md  package-lock.json  tailwind.config.js
Teaching-pack-generator-completed/frontend/public/: mock_data.json
Teaching-pack-generator-completed/frontend/src/: App.css  App.tsx  index.css
Teaching-pack-generator-completed/src/: __init__.py
Teaching-pack-generator-completed/src/api/: README.md  __init__.py  app_context.py  auth.py  dependencies.py  main.py  main.py.backup  queue.py
Teaching-pack-generator-completed/training/: .gitignore  README.md  requirements.txt
(+83 files in other folders)
